<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_contentDescription"
        android:src="@drawable/ic_task_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primary_text_color"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="@dimen/btn_padding_vertical"
        android:text="@string/btn_sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_shape_white_button"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="@dimen/btn_padding_vertical"
        android:text="@string/btn_sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size" />
</LinearLayout>